--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
 
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+
 </head>
 
 <body>
 
-    <main class="main-container"></main>
+    <main class="main-container">
+
+        <header class ="input-container">
+            <input class="city-input" placeholder="Search City" type="text">
+            <button class="search-btn">
+                <span class="material-symbols-outlined">
+                    search
+                </span>
+            </button>
+        </header>
+
+    </main>
 </body>
 
 </html>
